ld/testsuite/ld-x86-64/pr24458b-x32.d
@@ -1,0 +1,5 @@
+#source: pr24458.s
+#as: --x32
+#ld: -pie -m elf32_x86_64
+#readelf: -n
+#pass
