ld/testsuite/ld-x86-64/pr24458b.d
@@ -1,0 +1,5 @@
+#source: pr24458.s
+#as: --64
+#ld: -pie -m elf_x86_64
+#readelf: -n
+#pass
