ld/testsuite/ld-x86-64/pr24458c.d
@@ -1,0 +1,5 @@
+#source: pr24458.s
+#as: --64
+#ld: -shared -m elf_x86_64
+#readelf: -n
+#pass
